--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "framer-motion": "^12.23.12",
     "next": "14.1.4",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.61.1",
