--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.536.0",
     "next": "14.1.4",
     "next-themes": "^0.4.6",
     "react": "^18",
