--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.0",
     "@hookform/resolvers": "^5.2.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
